@@ -105,5 +105,23 @@ class tx_oelib_tests_fixtures_TestingMapper extends tx_oelib_DataMapper {
 	public function createRelations(array &$data, tx_oelib_Model $model) {
 		parent::createRelations($data, $model);
 	}
+
+	/**
+	 * Retrieves all non-deleted, non-hidden models from the DB which match the
+	 * given where clause.
+	 *
+	 * @param string $whereClause
+	 *        WHERE clause for the record to retrieve, each element must  consist of a column name as key and a value to search for as value
+	 *        (will automatically get quoted), may be empty
+	 * @param string $sorting
+	 *        the sorting for the found records, must be a valid DB field
+	 *        optionally followed by "ASC" or "DESC", may be empty
+	 *
+	 * @return tx_oelib_List all models found in DB for the given where clause,
+	 *                       will be an empty list if no models were found
+	 */
+	public function findByWhereClause($whereClause = '', $sorting = '') {
+		return parent::findByWhereClause($whereClause, $sorting);
+	}
 }
 ?>
